Se agregó seccion2.html y los estilos de la imagen creada en seccion2.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             web modernas, y aprender a utilizarlos de manera 
             efectiva abre un abanico de posibilidades en el diseño 
             y la funcionalidad de <span>sitios web</span>.</p>
+        <p>Imagen de un  <a href="assets/img/gato.jpg">gato</a></p>
 
        
         
