se añadieron enlaces a la semana 4

--- a/semanas/semana4/semana4.html
+++ b/semanas/semana4/semana4.html
@@ -65,7 +65,12 @@ Aplicar diferentes valores a width, height, padding, border, y margin para obser
 Utilizar las DevTools del navegador para inspeccionar y ajustar el Box Model de los elementos.
 Alcanzar dimensiones específicas o espaciamientos particulares utilizando las propiedades del Box Model.
 
-Enlace: https://www.w3schools.com/css/css_boxmodel.asp  (Box Model)
+Enlaces: 
+https://www.w3schools.com/css/css_boxmodel.asp  (Box Model)
+https://bootcamp.laboratoria.la/es/topics/css/css/boxmodel-and-display (Box Model & Display)
+https://www.theodinproject.com/lessons/foundations-the-box-model
+https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model
+https://web.dev/learn/css/box-model
 
 =================================================================================
 
