se agregó semana 8 y además nav bar y estilos a todas las páginas, además de una nueva página de inicio para todo el proyecto

--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Mi página</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/styles.css">
-        <style></style>
-    </head>
-    <body>
-        <!--Tipos de Títulos (H)-->
-        <h1>Título H1</h1>
-        <h2>Título H2</h2>
-        <h3>Título H3</h3>
-        <h4>Título H4</h4>
-        <h5>Título H5</h5>
-        <h6>Título H6</h6>
-        <!--Párrafos-->
-        <p>Esto es un párrafo en HTML</p>
-        <p>Esto es un párrafo en <strong>HTML</strong></p>
-        <p>La tecnología web ha avanzado de manera significativa 
-            en los últimos años, transformando la manera en que 
-            interactuamos con el mundo digital. Hoy en día, los 
-            navegadores permiten renderizar <span>páginas web</span> complejas 
-            con facilidad, y las herramientas de desarrollo se han 
-            vuelto más accesibles para los programadores novatos y 
-            expertos. <a href="http://www.w3school.com">HTML, CSS y JavaScript</a> son los pilares 
-            fundamentales sobre los que se construyen las páginas 
-            web modernas, y aprender a utilizarlos de manera 
-            efectiva abre un abanico de posibilidades en el diseño 
-            y la funcionalidad de <span>sitios web</span>.</p>
-        <p>Imagen de un  <a href="seccion2.html">gato</a></p>
-
-       
-        
-        <script src="assets/js/script.js" async defer></script>
-    </body>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>GSAP Observer</title>
+  <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap'>
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!--
+Author: Fabio Ottaviani
+Link: https://linktr.ee/supahfunk
+-->
+<h1>Desarrollo y Diseño Web + IA</h1>
+<div class="carousel">
+  <a href="recursos.html"><div class="carousel-image">Recursos</div></a>
+  <a href="semanas/semana1/index.html"><div class="carousel-image">Semana 1</div></a>
+  <a href="semanas/semana2/index.html"><div class="carousel-image">Semana 2</div></a>
+  <a href="semanas/semana3/index.html"><div class="carousel-image">Semana 3</div></a>
+  <a href="semanas/semana4/index.html"><div class="carousel-image">Semana 4</div></a>
+  <a href="semanas/semana5/index.html"><div class="carousel-image">Semana 5</div></a>
+  <a href="semanas/semana6/index.html"><div class="carousel-image">Semana 6</div></a>
+  <a href="semanas/semana7/index.html"><div class="carousel-image">Semana 7</div></a>
+  <a href="semanas/semana8/index.html"><div class="carousel-image">Semana 8</div></a>
+  <a href="semanas/semana9/index.html"><div class="carousel-image">Semana 9</div></a>
+  <a href="#"><div class="carousel-image">Semana 10</div></a>
+  <a href="#"><div class="carousel-image">Semana 11</div></a>
+  <a href="#"><div class="carousel-image">Semana 12</div></a>
+  <a href="#"><div class="carousel-image">Semana 13</div></a>
+  <a href="#"><div class="carousel-image">Semana 14</div></a>
+  <a href="#"><div class="carousel-image">Semana 15</div></a>
+  <a href="#"><div class="carousel-image">Semana 16</div></a>
+  <a href="#"><div class="carousel-image">Semana 17</div></a>
+  <a href="secciones.html"><div class="carousel-image">Secciones</div></a>
+</div>
+<!-- partial -->
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?v=3.10.0e'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js?v=3.10.0e'></script>
+<script src='https://assets.codepen.io/16327/ScrollSmoother.min.js?v=3.10.0e'></script>
+<script src="assets/js/script.js"></script>
+</body>
 </html>
