--- a/semanas/semana3/htmltags.html
+++ b/semanas/semana3/htmltags.html
@@ -4,84 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de 100 Etiquetas HTML</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #333;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <link rel="stylesheet" href="../../assets/css/semanas/semana3/style.css">
 </head>
 <body>
-    <h1>Lista de 100 Etiquetas HTML</h1>
-    <table>
-        <tr>
-            <th>#</th>
-            <th>Etiqueta</th>
-            <th>Descripción</th>
-        </tr>
-        <tr><td>1</td><td>&lt;html&gt;</td><td>Raíz del documento HTML</td></tr>
-        <tr><td>2</td><td>&lt;head&gt;</td><td>Contiene metadatos</td></tr>
-        <tr><td>3</td><td>&lt;title&gt;</td><td>Define el título de la página</td></tr>
-        <tr><td>4</td><td>&lt;body&gt;</td><td>Contenido visible</td></tr>
-        <tr><td>5</td><td>&lt;meta&gt;</td><td>Metadatos sobre la página</td></tr>
-        <tr><td>6</td><td>&lt;base&gt;</td><td>Define URL base</td></tr>
-        <tr><td>7</td><td>&lt;header&gt;</td><td>Encabezado</td></tr>
-        <tr><td>8</td><td>&lt;nav&gt;</td><td>Menú de navegación</td></tr>
-        <tr><td>9</td><td>&lt;main&gt;</td><td>Contenido principal</td></tr>
-        <tr><td>10</td><td>&lt;section&gt;</td><td>Sección de contenido</td></tr>
-        <tr><td>11</td><td>&lt;article&gt;</td><td>Artículo independiente</td></tr>
-        <tr><td>12</td><td>&lt;aside&gt;</td><td>Contenido lateral</td></tr>
-        <tr><td>13</td><td>&lt;footer&gt;</td><td>Pie de página</td></tr>
-        <tr><td>14</td><td>&lt;address&gt;</td><td>Información de contacto</td></tr>
-        <tr><td>15</td><td>&lt;h1&gt; - &lt;h6&gt;</td><td>Encabezados</td></tr>
-        <tr><td>16</td><td>&lt;p&gt;</td><td>Párrafo</td></tr>
-        <tr><td>17</td><td>&lt;br&gt;</td><td>Salto de línea</td></tr>
-        <tr><td>18</td><td>&lt;hr&gt;</td><td>Línea horizontal</td></tr>
-        <tr><td>19</td><td>&lt;strong&gt;</td><td>Texto en negrita semántica</td></tr>
-        <tr><td>20</td><td>&lt;em&gt;</td><td>Texto en cursiva semántica</td></tr>
-        <tr><td>21</td><td>&lt;a&gt;</td><td>Enlace</td></tr>
-        <tr><td>22</td><td>&lt;img&gt;</td><td>Imagen</td></tr>
-        <tr><td>23</td><td>&lt;ul&gt;</td><td>Lista desordenada</td></tr>
-        <tr><td>24</td><td>&lt;ol&gt;</td><td>Lista ordenada</td></tr>
-        <tr><td>25</td><td>&lt;li&gt;</td><td>Elemento de lista</td></tr>
-        <tr><td>26</td><td>&lt;table&gt;</td><td>Tabla</td></tr>
-        <tr><td>27</td><td>&lt;tr&gt;</td><td>Fila de tabla</td></tr>
-        <tr><td>28</td><td>&lt;td&gt;</td><td>Celda de tabla</td></tr>
-        <tr><td>29</td><td>&lt;th&gt;</td><td>Encabezado de tabla</td></tr>
-        <tr><td>30</td><td>&lt;form&gt;</td><td>Formulario</td></tr>
-        <tr><td>31</td><td>&lt;input&gt;</td><td>Campo de entrada</td></tr>
-        <tr><td>32</td><td>&lt;button&gt;</td><td>Botón</td></tr>
-        <tr><td>33</td><td>&lt;select&gt;</td><td>Menú desplegable</td></tr>
-        <tr><td>34</td><td>&lt;option&gt;</td><td>Opción en un select</td></tr>
-        <tr><td>35</td><td>&lt;textarea&gt;</td><td>Área de texto</td></tr>
-        <tr><td>36</td><td>&lt;label&gt;</td><td>Etiqueta para input</td></tr>
-        <tr><td>37</td><td>&lt;iframe&gt;</td><td>Marco embebido</td></tr>
-        <tr><td>38</td><td>&lt;script&gt;</td><td>Script de JavaScript</td></tr>
-        <tr><td>39</td><td>&lt;noscript&gt;</td><td>Mensaje si JS está desactivado</td></tr>
-        <tr><td>40</td><td>&lt;canvas&gt;</td><td>Gráficos en JS</td></tr>
-        <!--Completar las etiquetas faltantes de acuerdo a la lista comentada más abajo de este archivo-->
-        <tr><td>99</td><td>&lt;dialog&gt;</td><td>Cuadro de diálogo</td></tr>
-        <tr><td>100</td><td>&lt;wbr&gt;</td><td>Punto de posible salto de línea</td></tr>
-    </table>
+    <header>
+        <h1>Desarrollo y Diseño Web + IA</h1>
+        <nav>
+            <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../semana2/index.html">Semana 2</a></li>
+                <li>
+                    <a href="#">Semana 3 ▾</a>
+                    <ul>
+                        <li><a href="index.html">Resumen Semana 3</a></li>
+                        <li><a href="selectorescss.html">Selectores CSS</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Semana 4 ▾</a>
+                    <ul>
+                      <li><a href="../semana4/index.html">Resumen Semana 4</a></li>
+                      <li><a href="../semana4/box-model.html">Box Model</a></li>
+                      <li><a href="../semana4/calculator.html">Calculadora JS</a></li>
+                      <li><a href="../semana4/oddoreven.html">Par o Impar</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Lista de 100 Etiquetas HTML</h1>
+        <table>
+            <tr>
+                <th>#</th>
+                <th>Etiqueta</th>
+                <th>Descripción</th>
+            </tr>
+            <tr><td>1</td><td>&lt;html&gt;</td><td>Raíz del documento HTML</td></tr>
+            <tr><td>2</td><td>&lt;head&gt;</td><td>Contiene metadatos</td></tr>
+            <tr><td>3</td><td>&lt;title&gt;</td><td>Define el título de la página</td></tr>
+            <tr><td>4</td><td>&lt;body&gt;</td><td>Contenido visible</td></tr>
+            <tr><td>5</td><td>&lt;meta&gt;</td><td>Metadatos sobre la página</td></tr>
+            <tr><td>6</td><td>&lt;base&gt;</td><td>Define URL base</td></tr>
+            <tr><td>7</td><td>&lt;header&gt;</td><td>Encabezado</td></tr>
+            <tr><td>8</td><td>&lt;nav&gt;</td><td>Menú de navegación</td></tr>
+            <tr><td>9</td><td>&lt;main&gt;</td><td>Contenido principal</td></tr>
+            <tr><td>10</td><td>&lt;section&gt;</td><td>Sección de contenido</td></tr>
+            <tr><td>11</td><td>&lt;article&gt;</td><td>Artículo independiente</td></tr>
+            <tr><td>12</td><td>&lt;aside&gt;</td><td>Contenido lateral</td></tr>
+            <tr><td>13</td><td>&lt;footer&gt;</td><td>Pie de página</td></tr>
+            <tr><td>14</td><td>&lt;address&gt;</td><td>Información de contacto</td></tr>
+            <tr><td>15</td><td>&lt;h1&gt; - &lt;h6&gt;</td><td>Encabezados</td></tr>
+            <tr><td>16</td><td>&lt;p&gt;</td><td>Párrafo</td></tr>
+            <tr><td>17</td><td>&lt;br&gt;</td><td>Salto de línea</td></tr>
+            <tr><td>18</td><td>&lt;hr&gt;</td><td>Línea horizontal</td></tr>
+            <tr><td>19</td><td>&lt;strong&gt;</td><td>Texto en negrita semántica</td></tr>
+            <tr><td>20</td><td>&lt;em&gt;</td><td>Texto en cursiva semántica</td></tr>
+            <tr><td>21</td><td>&lt;a&gt;</td><td>Enlace</td></tr>
+            <tr><td>22</td><td>&lt;img&gt;</td><td>Imagen</td></tr>
+            <tr><td>23</td><td>&lt;ul&gt;</td><td>Lista desordenada</td></tr>
+            <tr><td>24</td><td>&lt;ol&gt;</td><td>Lista ordenada</td></tr>
+            <tr><td>25</td><td>&lt;li&gt;</td><td>Elemento de lista</td></tr>
+            <tr><td>26</td><td>&lt;table&gt;</td><td>Tabla</td></tr>
+            <tr><td>27</td><td>&lt;tr&gt;</td><td>Fila de tabla</td></tr>
+            <tr><td>28</td><td>&lt;td&gt;</td><td>Celda de tabla</td></tr>
+            <tr><td>29</td><td>&lt;th&gt;</td><td>Encabezado de tabla</td></tr>
+            <tr><td>30</td><td>&lt;form&gt;</td><td>Formulario</td></tr>
+            <tr><td>31</td><td>&lt;input&gt;</td><td>Campo de entrada</td></tr>
+            <tr><td>32</td><td>&lt;button&gt;</td><td>Botón</td></tr>
+            <tr><td>33</td><td>&lt;select&gt;</td><td>Menú desplegable</td></tr>
+            <tr><td>34</td><td>&lt;option&gt;</td><td>Opción en un select</td></tr>
+            <tr><td>35</td><td>&lt;textarea&gt;</td><td>Área de texto</td></tr>
+            <tr><td>36</td><td>&lt;label&gt;</td><td>Etiqueta para input</td></tr>
+            <tr><td>37</td><td>&lt;iframe&gt;</td><td>Marco embebido</td></tr>
+            <tr><td>38</td><td>&lt;script&gt;</td><td>Script de JavaScript</td></tr>
+            <tr><td>39</td><td>&lt;noscript&gt;</td><td>Mensaje si JS está desactivado</td></tr>
+            <tr><td>40</td><td>&lt;canvas&gt;</td><td>Gráficos en JS</td></tr>
+            <!--Completar las etiquetas faltantes de acuerdo a la lista comentada más abajo de este archivo-->
+            <tr><td>99</td><td>&lt;dialog&gt;</td><td>Cuadro de diálogo</td></tr>
+            <tr><td>100</td><td>&lt;wbr&gt;</td><td>Punto de posible salto de línea</td></tr>
+        </table>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Diseño y Desarrollo Web + IA - TEC UCT - Docente: Cristian Iglesias Vera - cristian.iglesias@uct.cl</p>
+    </footer>
 </body>
 </html>
 
