--- a/semanas/semana3/selectorescss.html
+++ b/semanas/semana3/selectorescss.html
@@ -4,55 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de 100 Selectores CSS3</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #333;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <link rel="stylesheet" href="../../assets/css/semanas/semana3/style.css">
 </head>
 <body>
-    <h1>Lista de 100 Selectores CSS3</h1>
-    <table>
-        <tr>
-            <th>#</th>
-            <th>Selector</th>
-            <th>Descripción</th>
-        </tr>
-        <tr><td>1</td><td>*</td><td>Selecciona todos los elementos</td></tr>
-        <tr><td>2</td><td>elemento</td><td>Selecciona todas las etiquetas de ese tipo</td></tr>
-        <tr><td>3</td><td>#id</td><td>Selecciona un elemento por su ID</td></tr>
-        <tr><td>4</td><td>.clase</td><td>Selecciona todos los elementos con esa clase</td></tr>
-        <tr><td>5</td><td>elemento1, elemento2</td><td>Selecciona múltiples elementos</td></tr>
-        <tr><td>6</td><td>elemento elemento</td><td>Selecciona descendientes directos</td></tr>
-        <tr><td>7</td><td>elemento > elemento</td><td>Selecciona solo los hijos directos</td></tr>
-        <tr><td>8</td><td>elemento + elemento</td><td>Selecciona el siguiente hermano inmediato</td></tr>
-        <tr><td>9</td><td>elemento ~ elemento</td><td>Selecciona todos los hermanos siguientes</td></tr>
-        <tr><td>10</td><td>[atributo]</td><td>Selecciona elementos con un atributo específico</td></tr>
-        <!--Agrega los selectores detallados en la lista que se encuentra comentada, más abajo, en este archivo-->
-        <tr><td>...</td><td>...</td><td>...</td></tr>
-        <tr><td>99</td><td>:checked</td><td>Selecciona elementos marcados (checkbox, radio)</td></tr>
-        <tr><td>100</td><td>:target</td><td>Selecciona el elemento objetivo de un enlace</td></tr>
-    </table>
+    <header>
+        <h1>Desarrollo y Diseño Web + IA</h1>
+        <nav>
+            <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../semana2/index.html">Semana 2</a></li>
+                <li>
+                    <a href="#">Semana 3 ▾</a>
+                    <ul>
+                        <li><a href="index.html">Resumen Semana 3</a></li>
+                        <li><a href="htmltags.html">HTML Tags</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Semana 4 ▾</a>
+                    <ul>
+                      <li><a href="../semana4/index.html">Resumen Semana 4</a></li>
+                      <li><a href="../semana4/box-model.html">Box Model</a></li>
+                      <li><a href="../semana4/calculator.html">Calculadora JS</a></li>
+                      <li><a href="../semana4/oddoreven.html">Par o Impar</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Lista de 100 Selectores CSS3</h1>
+        <table>
+            <tr>
+                <th>#</th>
+                <th>Selector</th>
+                <th>Descripción</th>
+            </tr>
+            <tr><td>1</td><td>*</td><td>Selecciona todos los elementos</td></tr>
+            <tr><td>2</td><td>elemento</td><td>Selecciona todas las etiquetas de ese tipo</td></tr>
+            <tr><td>3</td><td>#id</td><td>Selecciona un elemento por su ID</td></tr>
+            <tr><td>4</td><td>.clase</td><td>Selecciona todos los elementos con esa clase</td></tr>
+            <tr><td>5</td><td>elemento1, elemento2</td><td>Selecciona múltiples elementos</td></tr>
+            <tr><td>6</td><td>elemento elemento</td><td>Selecciona descendientes directos</td></tr>
+            <tr><td>7</td><td>elemento > elemento</td><td>Selecciona solo los hijos directos</td></tr>
+            <tr><td>8</td><td>elemento + elemento</td><td>Selecciona el siguiente hermano inmediato</td></tr>
+            <tr><td>9</td><td>elemento ~ elemento</td><td>Selecciona todos los hermanos siguientes</td></tr>
+            <tr><td>10</td><td>[atributo]</td><td>Selecciona elementos con un atributo específico</td></tr>
+            <!--Agrega los selectores detallados en la lista que se encuentra comentada, más abajo, en este archivo-->
+            <tr><td>...</td><td>...</td><td>...</td></tr>
+            <tr><td>99</td><td>:checked</td><td>Selecciona elementos marcados (checkbox, radio)</td></tr>
+            <tr><td>100</td><td>:target</td><td>Selecciona el elemento objetivo de un enlace</td></tr>
+        </table>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Diseño y Desarrollo Web + IA - TEC UCT - Docente: Cristian Iglesias Vera - cristian.iglesias@uct.cl</p>
+    </footer>
 </body>
 </html>
 
